Department and senester added for diploma students. DTE, MSBTE, AISHE codes are added for school/college profiles